Closed Bug 1864603 Opened 1 year ago Closed 1 year ago

Default Browser Agent task reports running successfully even if it exits early when disabled.

Categories

(Toolkit :: Default Browser Agent, defect)

Firefox 120
Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
121 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox119 --- unaffected
firefox120 --- wontfix
firefox121 --- verified

People

(Reporter: atrif, Assigned: nrishel)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [fidedi])

Attachments

(2 files)

Attached image default_browser.gif

Found in

  • 120.0RC1

Affected versions

  • 120.0RC1
  • 121.0a1 (2023-11-13)

Tested platforms

  • Affected platforms: Windows 10, Windows 11
  • Unaffected platforms: macOS 12, Ubuntu 22

Steps to reproduce

  1. Go to about:config and set default-browser-agent.enabled:false.
  2. Restart the browser.
  3. Go to search -> Search for Task scheduler and open it -> Extend Task Scheduler Library -> Select Mozilla
  4. Right-click on the WDBA task and select Run.

Expected result

  • This program is blocked by a group policy message is displayed.

Actual result

  • The operation completed successfully message is displayed.

Regression

  • I will search for one ASAP. 119.0.1 is not affected.

Additional notes

  • Attached a screen recording.

:atrif, could you try to find a regression range using for example mozregression?

I have made a manual regression range: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=738c0a460acb30ab2ab419f4c0dc93fa9af200d6&tochange=5c56b92baa65aa27df61f84718594767ef8f26f4

Nightly builds between 2023-09-04 and 2023-09-06 do not install the Default browser agent task for some reason in my case so I extended the regression range.
Looking at the pushlog maybe bug 1838754 may be the regressor?

:nrishel can you take a look?

Flags: needinfo?(nrishel)
Assignee: nobody → nrishel
Flags: needinfo?(nrishel)
Whiteboard: [fidedi]
Summary: Default Browser Agent task runs even if is set to false in about:config → Default Browser Agent task reports running successfully even if it exits early when disabled.
Pushed by nrishel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8cddb095aac1 Return error codes from the Default Agent proxy. r=mhughes

Set release status flags based on info from the regressing bug 1838754

Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch

The patch landed in nightly and beta is affected.
:nrishel, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox120 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(nrishel)

No user impact except that hawk-eyed users noticing a change in result in a hidden away utility.

Flags: needinfo?(nrishel)
Flags: qe-verify+

Verified fixed with Firefox 122.0a1 on Windows 10x64 and Windows 11x64 23H2. This program is blocked by a group policy message is displayed in the task scheduler on Windows 10x64 after executing STR from comment 0. On Windows 11x64 23H2 I see that a (0x800704EC) message is displayed which after a Google search also means that the program is blocked by a group policy.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: