Bug 1864603 - Return error codes from the Default Agent proxy. r=mhughes

Differential Revision: https://phabricator.services.mozilla.com/D193613