toolkit/mozapps/defaultagent/proxy/main.cpp
@@ -78,5 +78,37 @@ int wmain(int argc, wchar_t** argv) {
 
   // Wait until process exists so uninstalling doesn't interrupt the background
   // task cleaning registry entries.
-  WaitForSingleObject(pi.hProcess, INFINITE);
+  DWORD exitCode;
+  if (WaitForSingleObject(pi.hProcess, INFINITE) == WAIT_OBJECT_0 &&
+      ::GetExitCodeProcess(pi.hProcess, &exitCode)) {
+    // Match EXIT_CODE in BackgroundTasksManager.sys.mjs and
+    // BackgroundTask_defaultagent.sys.mjs.
+    enum EXIT_CODE {
+      SUCCESS = 0,
+      NOT_FOUND = 2,
+      EXCEPTION = 3,
+      TIMEOUT = 4,
+      DISABLED_BY_POLICY = 11,
+      INVALID_ARGUMENT = 12,
+    };
+
+    switch (exitCode) {
+      case SUCCESS:
+        return S_OK;
+      case NOT_FOUND:
+        return E_UNEXPECTED;
+      case EXCEPTION:
+        return E_FAIL;
+      case TIMEOUT:
+        return E_FAIL;
+      case DISABLED_BY_POLICY:
+        return HRESULT_FROM_WIN32(ERROR_ACCESS_DISABLED_BY_POLICY);
+      case INVALID_ARGUMENT:
+        return E_INVALIDARG;
+      default:
+        return E_UNEXPECTED;
+    }
+  }
+
+  return E_UNEXPECTED;
 }
